dynamic title page

--- a/index.html
+++ b/index.html
@@ -72,18 +72,13 @@
 <div class="lowerpart-item"></div><a href="#"><img src="/images/logo3.png" alt="logo3">logo9</a></div>
 
 </div>
-
-
-
-
-
-
-
-
-
-
 </div>
 </div>
+<div>
+
+  
+</div>
+
 <!-- footer part starting -->
 
 
