create custom post and add post using wp-query

--- a/index.html
+++ b/index.html
@@ -75,7 +75,19 @@
 </div>
 </div>
 <div>
+hello
+<hr>
 
+<div class="lowerppost">
+<div class="box">
+<img src="<?pho bloginfo('template_directory') ?>/images/vegbiriyani.jpg" alt="">
+<h3>Demo</h3>
+<button>Demo</button>
+</div>
+
+
+
+</div>
   
 </div>
 
